<resources>
    <string name="app_name">AccountBook</string>
    <string name="about">关于</string>
    <string name="backup">数据备份</string>
    <string name="my">我的</string>
    <string name="data_export">数据导出</string>
    <string name="manager">管理</string>
    <string name="backup_manager">备份管理</string>
    <string name="delete">删除</string>
    <string name="my_detail">详情</string>
    <string name="language">语言</string>
</resources>