<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.geyu.my.ui.contract.My_BackupContract.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.geyu.view.TopBar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:text="@string/backup">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:onClick="@{() -> view.manager()}"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_gravity="end|center_vertical">
                <TextView
                    style="@style/text_medium_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/manager"/>
            </FrameLayout>
        </com.geyu.view.TopBar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_height="@dimen/dp_50"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            android:onClick="@{() -> view.dataExport()}">
            <TextView
                style="@style/text_medium_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/data_export"/>
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrwo"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>